Refactor ui-library
